--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,6 +108,20 @@
                         </a>
                     </li>
                 </ul>
+                <div class="navbar-nav ms-auto">
+                    <div class="nav-item d-flex align-items-center">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" 
+                                   type="checkbox" 
+                                   id="globalExpertModeToggle" 
+                                   x-model="expertMode">
+                            <label class="form-check-label text-light" for="globalExpertModeToggle">
+                                <i class="fas fa-flask me-1" title="Expert Mode"></i>
+                                <span class="d-none d-md-inline">Expert Mode</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -194,19 +208,10 @@
                         <div class="row mb-4">
                             <div class="col">
                                 <div class="card">
-                                    <div class="card-header d-flex justify-content-between align-items-center">
+                                    <div class="card-header">
                                         <h5 class="card-title mb-0">
                                             <i class="fas fa-cogs me-2"></i>System Services
                                         </h5>
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" 
-                                                   type="checkbox" 
-                                                   id="expertModeToggle" 
-                                                   x-model="expertMode">
-                                            <label class="form-check-label" for="expertModeToggle">
-                                                Expert Mode
-                                            </label>
-                                        </div>
                                     </div>
 
                                         <!-- Loading state -->
@@ -222,10 +227,10 @@
                                         </template>
 
                                                                 <!-- Modern Services List -->
-                        <template x-if="filteredServices.length > 0">
+                        <template x-if="getFilteredServices(expertMode).length > 0">
                             <div class="card-body p-0">
                                 <div class="list-group list-group-flush">
-                                    <template x-for="service in filteredServices" :key="service.name">
+                                    <template x-for="service in getFilteredServices(expertMode)" :key="service.name">
                                         <div class="list-group-item border-0 border-start border-4 py-3 px-4" 
                                              :class="{
                                                  'border-success': service.active && service.status === 'active',
@@ -989,16 +994,6 @@
                                     <span class="d-none d-md-inline">View Logs</span>
                                     <span class="d-md-none">Logs</span>
                                 </button>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" 
-                                           type="checkbox" 
-                                           x-model="expertMode" 
-                                           id="expertMode">
-                                    <label class="form-check-label" for="expertMode">
-                                        <i class="fas fa-flask" title="Expert Mode"></i>
-                                        Expert Mode
-                                    </label>
-                                </div>
                             </div>
                         </div>
                         <div class="card-body">
@@ -1639,16 +1634,6 @@
                                             <span class="d-none d-md-inline">View Logs</span>
                                             <span class="d-md-none">Logs</span>
                                         </button>
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" 
-                                                   type="checkbox" 
-                                                   x-model="expertMode" 
-                                                   id="expertModeSoundscape">
-                                            <label class="form-check-label" for="expertModeSoundscape">
-                                                <i class="fas fa-flask" title="Expert Mode"></i>
-                                                Expert Mode
-                                            </label>
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="card-body">
@@ -3527,7 +3512,6 @@
                     groups: {}
                 },
                 configLoaded: false,
-                expertMode: false,
                 serviceStatus: {
                     active: false,
                     enabled: false,
@@ -4119,7 +4103,6 @@
                 actionLoading: false,
                 actionMessage: '',
                 actionError: false,
-                expertMode: false,
                 // Reboot functionality
                 rebootLoading: false,
 
@@ -4246,8 +4229,9 @@
                     }
                 },
 
-                get filteredServices() {
-                    if (this.expertMode) {
+                // Function to get filtered services based on expert mode
+                getFilteredServices(expertMode) {
+                    if (expertMode) {
                         return this.services;
                     } else {
                         return this.services.filter(service => !service.expert);
